Add operation stats plots to the jupyter notebook

--- a/analyze-tblgen/visualize_stats.ipynb
+++ b/analyze-tblgen/visualize_stats.ipynb
@@ -20,12 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "id": "02091e87-670f-469f-b39c-293fc1f4a114",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from main import *"
+    "from main import *\n",
+    "import ipywidgets as widgets\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -38,13 +40,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "id": "a1e14519-1ece-4d6e-ba65-4df5f59072e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "stats = get_stat_from_files()"
+    "stats = get_stat_from_files()\n",
+    "dialects = stats.dialects\n",
+    "dialect_names = dialects.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f65748-c20a-465b-abe3-090d844dfaa3",
+   "metadata": {},
+   "source": [
+    "A simple bar plotter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "2c8235b5-f5ba-4b2a-bfb4-33fb510a2745",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_simple_consecutive_integer_data(values):\n",
+    "    keys = [str(i) for i in range(len(values))]\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_axes([0,0,1,1])\n",
+    "    ax.bar(keys,values)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e520a17f-0f7f-4b9f-8799-1666aa938c33",
+   "metadata": {},
+   "source": [
+    "# Some general statistics on operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "fecb9e4b-f32b-4ff5-aab1-7272f931efe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d957bfc4a4944fd9fcf60bc107c6883",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(ToggleButtons(description='Category:', options=('operands', 'results', 'regions', 'attri…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "distribution = dict()\n",
+    "distribution[\"operands\"] = get_global_op_distribution(stats, lambda x: x.numOperands)\n",
+    "distribution[\"results\"] = get_global_op_distribution(stats, lambda x: x.numResults)\n",
+    "distribution[\"regions\"] = get_global_op_distribution(stats, lambda x: x.numRegions)\n",
+    "distribution[\"attributes\"] = get_global_op_distribution(stats, lambda x: len(x.attributes))\n",
+    "distribution[\"C++ printer\"] = get_global_op_distribution(stats, lambda x: 1 - int(x.hasAssemblyFormat))\n",
+    "distribution[\"C++ verifier\"] = get_global_op_distribution(stats, lambda x: int(x.hasVerifier))\n",
+    "distribution[\"traits\"] = get_global_op_distribution(stats, lambda x: len(x.traits))\n",
+    "distribution[\"interfaces\"] = get_global_op_distribution(stats, lambda x: len(x.interfaces))\n",
+    "\n",
+    "category_select = widgets.ToggleButtons(\n",
+    "    options=distribution.keys(),\n",
+    "    description='Category:',\n",
+    "    disabled=False,\n",
+    "    button_style='',\n",
+    ")\n",
+    "\n",
+    "@widgets.interact(category=category_select)\n",
+    "def category_plot(category):\n",
+    "    all_distribution = distribution[category][0]\n",
+    "    per_dialect_distribution = distribution[category][1]\n",
+    "    \n",
+    "    plot_simple_consecutive_integer_data(all_distribution)\n",
+    "\n",
+    "    toggle_select =widgets.ToggleButtons(\n",
+    "        options=dialect_names,\n",
+    "        description='Dialect:',\n",
+    "        disabled=False,\n",
+    "        button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    )\n",
+    "\n",
+    "    @widgets.interact(dialect_name=toggle_select)\n",
+    "    def plot_dialect(dialect_name):\n",
+    "        plot_simple_consecutive_integer_data(per_dialect_distribution[dialect_name])"
    ]
   },
   {
