--- a/analyze-tblgen/visualize_stats.ipynb
+++ b/analyze-tblgen/visualize_stats.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "2c8235b5-f5ba-4b2a-bfb4-33fb510a2745",
    "metadata": {},
    "outputs": [],
@@ -71,27 +71,56 @@
     "    fig = plt.figure()\n",
     "    ax = fig.add_axes([0,0,1,1])\n",
     "    ax.bar(keys,values)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    \n",
+    "def category_plot(distribution):\n",
+    "    category_select = widgets.ToggleButtons(\n",
+    "        options=distribution.keys(),\n",
+    "        description='Category:',\n",
+    "        disabled=False,\n",
+    "        button_style='',\n",
+    "    )\n",
+    "\n",
+    "    @widgets.interact(category=category_select)\n",
+    "    def category_plot_(category):\n",
+    "        all_distribution = distribution[category][0]\n",
+    "        per_dialect_distribution = distribution[category][1]\n",
+    "\n",
+    "        plot_simple_consecutive_integer_data(all_distribution)\n",
+    "\n",
+    "        toggle_select =widgets.ToggleButtons(\n",
+    "            options=dialect_names,\n",
+    "            description='Dialect:',\n",
+    "            disabled=False,\n",
+    "            button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "        )\n",
+    "\n",
+    "        @widgets.interact(dialect_name=toggle_select)\n",
+    "        def plot_dialect(dialect_name):\n",
+    "            plot_simple_consecutive_integer_data(per_dialect_distribution[dialect_name])"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e520a17f-0f7f-4b9f-8799-1666aa938c33",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Some general statistics on operations"
+    "# Some general statistics\n",
+    "## General statistics on operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
    "id": "fecb9e4b-f32b-4ff5-aab1-7272f931efe0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d957bfc4a4944fd9fcf60bc107c6883",
+       "model_id": "631e25b538f54d0bb71c6d1e9d0d44a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,121 +143,175 @@
     "distribution[\"traits\"] = get_global_op_distribution(stats, lambda x: len(x.traits))\n",
     "distribution[\"interfaces\"] = get_global_op_distribution(stats, lambda x: len(x.interfaces))\n",
     "\n",
+    "category_plot(distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1075617c-4655-48b9-95d3-6b831b67b680",
+   "metadata": {},
+   "source": [
+    "## General statistics on types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "ba4eccf3-4552-42c5-a5e4-934b55be2425",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6dd73ce603f4bf29a31af9efc701842",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(ToggleButtons(description='Category:', options=('parameters', 'traits', 'interfaces'), v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "distribution = dict()\n",
+    "distribution[\"parameters\"] = get_global_type_distribution(stats, lambda x: len(x.parameters))\n",
+    "distribution[\"traits\"] = get_global_type_distribution(stats, lambda x: len(x.traits))\n",
+    "distribution[\"interfaces\"] = get_global_type_distribution(stats, lambda x: len(x.interfaces))\n",
+    "\n",
+    "category_plot(distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c49b8ba-6725-484d-aaf2-576573781137",
+   "metadata": {},
+   "source": [
+    "## General statistics on attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "34201011-5886-4567-bc84-347c32ab36a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "569424a102bf409cb88c5e2a70990c2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(ToggleButtons(description='Category:', options=('parameters', 'traits', 'interfaces'), v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "distribution = dict()\n",
+    "distribution[\"parameters\"] = get_global_attr_distribution(stats, lambda x: len(x.parameters))\n",
+    "distribution[\"traits\"] = get_global_attr_distribution(stats, lambda x: len(x.traits))\n",
+    "distribution[\"interfaces\"] = get_global_attr_distribution(stats, lambda x: len(x.interfaces))\n",
+    "\n",
+    "category_plot(distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c72cca4-b9a2-4429-afea-886b8fe55df6",
+   "metadata": {},
+   "source": [
+    "# \"Declarativeness\" of current dialects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "14025162-65fe-4733-ad18-50d02aaf34fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1439a2e817d347b3a5875d4e91a5b728",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(ToggleButtons(description='Category:', options=('types', 'attributes', 'op has C++ parse…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "distribution = dict()\n",
+    "# TODO check constraints in types/attributes\n",
+    "distribution[\"types\"] = get_global_type_distribution(stats, lambda x: int(not x.hasVerifier))\n",
+    "distribution[\"attributes\"] = get_global_attr_distribution(stats, lambda x: int(not x.hasVerifier))\n",
+    "distribution[\"op has C++ parser\"] = get_global_op_distribution(stats, lambda x: int(not x.hasAssemblyFormat))\n",
+    "distribution[\"op has C++ verifier\"] = get_global_op_distribution(stats, lambda x: int(x.hasVerifier))\n",
+    "# Number of operations that have declarative operands/results\n",
+    "distribution[\"decl operands/results\"] = get_global_op_distribution(stats, lambda x: int(x.is_operands_results_attrs_declarative()))\n",
+    "# Number of operations that have declarative traits\n",
+    "distribution[\"decl op traits\"] = get_global_op_distribution(stats, lambda x: int(x.is_traits_declarative()))\n",
+    "# Number of operations that have declarative operands, results, and no C++ verifiers\n",
+    "distribution[\"decl ops without traits/interfaces\"] = get_global_op_distribution(stats, lambda x: int(x.is_declarative(check_traits=False, check_interfaces=False)))\n",
+    "# Fully declarative\n",
+    "distribution[\"decl ops without interfaces\"] = get_global_op_distribution(stats, lambda x: int(x.is_declarative(check_traits=True, check_interfaces=False)))\n",
+    "# Fully declarative\n",
+    "distribution[\"decl ops\"] = get_global_op_distribution(stats, lambda x: int(x.is_declarative(check_traits=True, check_interfaces=True)))\n",
+    "\n",
+    "category_plot(distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62128922-43f0-45eb-bc6a-e19be2a2faf6",
+   "metadata": {},
+   "source": [
+    "# Printing dialects in IRDL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "3b714337-5195-4743-87a5-d0f4dcb43d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "050dd6f2edae40289ab4d4a443415a71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(ToggleButtons(description='Category:', options=('builtin', 'sparse_tensor', 'tosa', 'scf…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "category_select = widgets.ToggleButtons(\n",
-    "    options=distribution.keys(),\n",
+    "    options=dialect_names,\n",
     "    description='Category:',\n",
     "    disabled=False,\n",
     "    button_style='',\n",
     ")\n",
     "\n",
-    "@widgets.interact(category=category_select)\n",
-    "def category_plot(category):\n",
-    "    all_distribution = distribution[category][0]\n",
-    "    per_dialect_distribution = distribution[category][1]\n",
-    "    \n",
-    "    plot_simple_consecutive_integer_data(all_distribution)\n",
-    "\n",
-    "    toggle_select =widgets.ToggleButtons(\n",
-    "        options=dialect_names,\n",
-    "        description='Dialect:',\n",
-    "        disabled=False,\n",
-    "        button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    )\n",
-    "\n",
-    "    @widgets.interact(dialect_name=toggle_select)\n",
-    "    def plot_dialect(dialect_name):\n",
-    "        plot_simple_consecutive_integer_data(per_dialect_distribution[dialect_name])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "49a94af1-3869-4638-ba4a-2c0bf390ebd0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dialect builtin {\n",
-      "  Type Builtin_BFloat16 {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Complex {\n",
-      "    Parameters (elementType: \"Type\")\n",
-      "  }\n",
-      "  Type Builtin_Float128 {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Float16 {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Float32 {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Float64 {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Float80 {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Function {\n",
-      "    Parameters (inputs: \"ArrayRef<Type>\", results: \"ArrayRef<Type>\")\n",
-      "  }\n",
-      "  Type Builtin_Index {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Integer {\n",
-      "    Parameters (width: \"unsigned\", signedness: \"SignednessSemantics\")\n",
-      "    CppVerifier \"verify($_self)\"\n",
-      "  }\n",
-      "  Type Builtin_MemRef {\n",
-      "    Parameters (shape: \"::llvm::ArrayRef<int64_t>\", elementType: \"Type\", affineMaps: \"::llvm::ArrayRef<AffineMap>\", memorySpace: \"Attribute\")\n",
-      "    CppVerifier \"verify($_self)\"\n",
-      "  }\n",
-      "  Type Builtin_None {\n",
-      "    Parameters ()\n",
-      "  }\n",
-      "  Type Builtin_Opaque {\n",
-      "    Parameters (dialectNamespace: \"Identifier\", typeData: \"::llvm::StringRef\")\n",
-      "    CppVerifier \"verify($_self)\"\n",
-      "  }\n",
-      "  Type Builtin_RankedTensor {\n",
-      "    Parameters (shape: \"::llvm::ArrayRef<int64_t>\", elementType: \"Type\", encoding: \"Attribute\")\n",
-      "    CppVerifier \"verify($_self)\"\n",
-      "  }\n",
-      "  Type Builtin_Tuple {\n",
-      "    Parameters (types: \"ArrayRef<Type>\")\n",
-      "  }\n",
-      "  Type Builtin_UnrankedMemRef {\n",
-      "    Parameters (elementType: \"Type\", memorySpace: \"Attribute\")\n",
-      "  }\n",
-      "  Type Builtin_UnrankedTensor {\n",
-      "    Parameters (elementType: \"Type\")\n",
-      "  }\n",
-      "  Type Builtin_Vector {\n",
-      "    Parameters (shape: \"::llvm::ArrayRef<int64_t>\", elementType: \"Type\")\n",
-      "    CppVerifier \"verify($_self)\"\n",
-      "  }\n",
-      "  Operation builtin.func {\n",
-      "    Attributes (sym_visibility: ::mlir::StringAttr,\n",
-      "                type: And<::mlir::TypeAttr, ::mlir::TypeAttr>,\n",
-      "                sym_name: ::mlir::StringAttr)\n",
-      "  }\n",
-      "  Operation builtin.module {\n",
-      "    Attributes (sym_visibility: ::mlir::StringAttr,\n",
-      "                sym_name: ::mlir::StringAttr)\n",
-      "  }\n",
-      "  Operation builtin.unrealized_conversion_cast {\n",
-      "    Operands (inputs: Variadic<Any>)\n",
-      "    Results (outputs: Variadic<Any>)\n",
-      "  }\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "stats.dialects[\"builtin\"].print()"
+    "@widgets.interact(dialect_name=category_select)\n",
+    "def category_plot_(dialect_name):\n",
+    "    print(dialects[dialect_name].print())"
    ]
   }
  ],
