Add simplifier for IRDL constraints

--- a/analyze-tblgen/visualize_stats.ipynb
+++ b/analyze-tblgen/visualize_stats.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "id": "02091e87-670f-469f-b39c-293fc1f4a114",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "id": "a1e14519-1ece-4d6e-ba65-4df5f59072e8",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "2c8235b5-f5ba-4b2a-bfb4-33fb510a2745",
    "metadata": {},
    "outputs": [],
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "fecb9e4b-f32b-4ff5-aab1-7272f931efe0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "631e25b538f54d0bb71c6d1e9d0d44a6",
+       "model_id": "aca00d81cd9d46bbb36e125ed53be2b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "ba4eccf3-4552-42c5-a5e4-934b55be2425",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6dd73ce603f4bf29a31af9efc701842",
+       "model_id": "c64eef7885774fd295219a0a1582f242",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "id": "34201011-5886-4567-bc84-347c32ab36a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "569424a102bf409cb88c5e2a70990c2e",
+       "model_id": "08de345e053c4159865abc0634406b47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "id": "14025162-65fe-4733-ad18-50d02aaf34fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1439a2e817d347b3a5875d4e91a5b728",
+       "model_id": "ee000613d68d492e9372c05d76e053f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,19 +282,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "id": "3b714337-5195-4743-87a5-d0f4dcb43d0e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "050dd6f2edae40289ab4d4a443415a71",
+       "model_id": "aad2320a3c0b496893caa0476d1d4ed4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(ToggleButtons(description='Category:', options=('builtin', 'sparse_tensor', 'tosa', 'scf…"
+       "interactive(children=(ToggleButtons(description='Dialect:', options=('builtin', 'sparse_tensor', 'tosa', 'scf'…"
       ]
      },
      "metadata": {},
@@ -302,16 +302,34 @@
     }
    ],
    "source": [
+    "import simplifier\n",
+    "from copy import *\n",
+    "\n",
+    "stats_optimized = simplifier.simplify(stats)\n",
+    "\n",
     "category_select = widgets.ToggleButtons(\n",
     "    options=dialect_names,\n",
-    "    description='Category:',\n",
+    "    description='Dialect:',\n",
     "    disabled=False,\n",
     "    button_style='',\n",
     ")\n",
     "\n",
     "@widgets.interact(dialect_name=category_select)\n",
-    "def category_plot_(dialect_name):\n",
-    "    print(dialects[dialect_name].print())"
+    "def print_dialect(dialect_name):\n",
+    "    \n",
+    "    optimization_select = widgets.ToggleButtons(\n",
+    "        options=[\"unoptimized\", \"optimized\"],\n",
+    "        description='',\n",
+    "        disabled=False,\n",
+    "        button_style='',\n",
+    "    )\n",
+    "    \n",
+    "    @widgets.interact(optimization=optimization_select)\n",
+    "    def print_optimized(optimization):\n",
+    "        if optimization == \"optimized\":\n",
+    "            stats_optimized.dialects[dialect_name].print()\n",
+    "        else:\n",
+    "            stats.dialects[dialect_name].print()"
    ]
   }
  ],
