Add multiple simplifications

--- a/analyze-tblgen/visualize_stats.ipynb
+++ b/analyze-tblgen/visualize_stats.ipynb
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aca00d81cd9d46bbb36e125ed53be2b8",
+       "model_id": "a702b4df074a414e85c76f5826ec2d7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c64eef7885774fd295219a0a1582f242",
+       "model_id": "21af68295d2246f7a67d0bf759ea172c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08de345e053c4159865abc0634406b47",
+       "model_id": "fb947be7ba944c4fab9335b337f68be9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,7 +239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee000613d68d492e9372c05d76e053f2",
+       "model_id": "c2f160af4fa4423c8ae35a1905c40b1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,13 +283,23 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3b714337-5195-4743-87a5-d0f4dcb43d0e",
+   "id": "13c99d96-93a4-409d-bea1-58119a482fc5",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AnyOf<builtin.integer<8, \"Signless\">, AnyOf<And<CppClass<::mlir::VectorType>, ShapedTypeOf<builtin.integer<8, \"Signless\">>>, And<CppClass<::mlir::TensorType>, ShapedTypeOf<builtin.integer<8, \"Signless\">>>>>\n",
+      "AnyOf<builtin.integer<8, \"Signless\">, builtin.vector<Any, builtin.integer<8, \"Signless\">>, builtin.tensor<Any, builtin.integer<8, \"Signless\">, Any>>\n",
+      "None\n",
+      "None\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aad2320a3c0b496893caa0476d1d4ed4",
+       "model_id": "9745d92412b647ebae5ed8cf44720799",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,6 +316,13 @@
     "from copy import *\n",
     "\n",
     "stats_optimized = simplifier.simplify(stats)\n",
+    "\n",
+    "constr = stats.dialects[\"tosa\"].ops[\"tosa.apply_scale\"].operands[2].constraint\n",
+    "constr_simplified = stats_optimized.dialects[\"tosa\"].ops[\"tosa.apply_scale\"].operands[2].constraint\n",
+    "print(constr)\n",
+    "print(constr_simplified)\n",
+    "print(simplifier.AndRedundantSimplifier.is_redundant(constr_simplified.operands[1], constr_simplified.operands[2]))\n",
+    "print(simplifier.AndRedundantSimplifier.simplify(constr_simplified))\n",
     "\n",
     "category_select = widgets.ToggleButtons(\n",
     "    options=dialect_names,\n",
