Update URL from 127.0.01 to github.com

--- a/website_notebook/visualize_stats.ipynb
+++ b/website_notebook/visualize_stats.ipynb
@@ -51,7 +51,7 @@
     "import json\n",
     "from js import fetch\n",
     "    \n",
-    "res = await fetch('http://127.0.0.1:8000/files/tablegen_data.json')\n",
+    "res = await fetch('https://opencompl.github.io/tablegen-stats/files/tablegen_data.json')\n",
     "text = await res.text()\n",
     "    \n",
     "stats = get_stats_from_json(text)\n",
