Close matplotlib figure

--- a/website_notebook/visualize_stats.ipynb
+++ b/website_notebook/visualize_stats.ipynb
@@ -80,6 +80,7 @@
     "    ax = fig.add_axes([0,0,1,1])\n",
     "    ax.bar(keys,values)\n",
     "    plt.show()\n",
+    "    plt.close()\n",
     "    \n",
     "def category_plot(distribution):\n",
     "    category_select = widgets.ToggleButtons(\n",
