ADd titles to plots

--- a/analyze-tblgen/src/visualize_stats.ipynb
+++ b/analyze-tblgen/src/visualize_stats.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "940a0190-e0d5-456d-860d-37f1758fd9db",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "This is a simple notebook that takes data scrapped from ODS/TableGen, and give statistics on the dialects.\n",
+    "Note that some manual translation was made to first translate the scrapped C++ verifiers into an IRDL representation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c0a5923-c53b-41d2-8074-9b243de70565",
    "metadata": {
     "tags": []
@@ -35,7 +49,7 @@
    "id": "3156d9dd-0eb2-4f5f-92ba-85f8c6b24cd8",
    "metadata": {},
    "source": [
-    "Get the data from TableGen:"
+    "Get the cached data from TableGen:"
    ]
   },
   {
@@ -63,14 +77,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "2c8235b5-f5ba-4b2a-bfb4-33fb510a2745",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_simple_consecutive_integer_data(values):\n",
-    "    keys = [str(i) for i in range(len(values))]\n",
-    "    fig = plt.bar(keys, values)\n",
+    "@dataclass\n",
+    "class PlotData:\n",
+    "    keys: List[str]\n",
+    "    values: List[Union[float, int]]\n",
+    "    title: Optional[str]\n",
+    "    \n",
+    "    def with_integer_keys(values, title=None):\n",
+    "        return PlotData([str(i) for i in range(len(values))], values, title=title)\n",
+    "\n",
+    "# Map raw data gathered from get_global_*_distribution to plot data\n",
+    "def map_dialect_data_to_plot(distribution, title=None):\n",
+    "    all_dialects = PlotData.with_integer_keys(distribution[0], title=title)\n",
+    "    dialects = {dialect_name: PlotData.with_integer_keys(dialect_data, title=title) for dialect_name, dialect_data in distribution[1].items()}\n",
+    "    return (all_dialects, dialects)\n",
+    "\n",
+    "def get_op_plot_stats(stats, lam, title=None):\n",
+    "    return map_dialect_data_to_plot(get_global_op_distribution(stats, lam), title=title)\n",
+    "\n",
+    "def get_type_plot_stats(stats, lam, title=None):\n",
+    "    return map_dialect_data_to_plot(get_global_type_distribution(stats, lam), title=title)\n",
+    "\n",
+    "def get_attr_plot_stats(stats, lam, title=None):\n",
+    "    return map_dialect_data_to_plot(get_global_attr_distribution(stats, lam), title=title)\n",
+    "\n",
+    "def plot_simple_consecutive_integer_data(plot_data):\n",
+    "    fig = plt.bar(plot_data.keys, plot_data.values)\n",
+    "    if plot_data.title is not None:\n",
+    "        plt.title(plot_data.title)\n",
     "    plt.show()\n",
     "    plt.close()\n",
     "    \n",
@@ -114,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "fecb9e4b-f32b-4ff5-aab1-7272f931efe0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf5a2cc25ebc4722b03bc483d649c332",
+       "model_id": "1b86e90fb9924f30a47e99d890ebdf2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,14 +174,14 @@
    ],
    "source": [
     "distribution = dict()\n",
-    "distribution[\"operands\"] = get_global_op_distribution(stats, lambda x: x.numOperands)\n",
-    "distribution[\"results\"] = get_global_op_distribution(stats, lambda x: x.numResults)\n",
-    "distribution[\"regions\"] = get_global_op_distribution(stats, lambda x: x.numRegions)\n",
-    "distribution[\"attributes\"] = get_global_op_distribution(stats, lambda x: len(x.attributes))\n",
-    "distribution[\"C++ printer\"] = get_global_op_distribution(stats, lambda x: 1 - int(x.hasAssemblyFormat))\n",
-    "distribution[\"C++ verifier\"] = get_global_op_distribution(stats, lambda x: int(x.hasVerifier))\n",
-    "distribution[\"traits\"] = get_global_op_distribution(stats, lambda x: len(x.traits))\n",
-    "distribution[\"interfaces\"] = get_global_op_distribution(stats, lambda x: len(x.interfaces))\n",
+    "distribution[\"operands\"] = get_op_plot_stats(stats, lambda x: x.numOperands, title=\"Distribution of the number of operand definitions\")\n",
+    "distribution[\"results\"] = get_op_plot_stats(stats, lambda x: x.numResults, title=\"Distribution of the number of result definitions\")\n",
+    "distribution[\"regions\"] = get_op_plot_stats(stats, lambda x: x.numRegions, title=\"Distribution of the number of region definitions\")\n",
+    "distribution[\"attributes\"] = get_op_plot_stats(stats, lambda x: len(x.attributes), title=\"Distribution of the number of attribute definitions\")\n",
+    "distribution[\"C++ printer\"] = get_op_plot_stats(stats, lambda x: 1 - int(x.hasAssemblyFormat), title=\"Distribution of number of C++ printers\")\n",
+    "distribution[\"C++ verifier\"] = get_op_plot_stats(stats, lambda x: int(x.hasVerifier), title=\"Distribution of the number of C++ verifiers\")\n",
+    "distribution[\"traits\"] = get_op_plot_stats(stats, lambda x: len(x.traits), title=\"Distribution of the number of traits\")\n",
+    "distribution[\"interfaces\"] = get_op_plot_stats(stats, lambda x: len(x.interfaces), title=\"Distribution of the number of interfaces\")\n",
     "\n",
     "category_plot(distribution)"
    ]
@@ -157,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "ba4eccf3-4552-42c5-a5e4-934b55be2425",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "752fd8e76c3e4a5f9bdf90197b20191b",
+       "model_id": "a2b9129812f443ca805e4fe0f3c3a7ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,9 +217,9 @@
    ],
    "source": [
     "distribution = dict()\n",
-    "distribution[\"parameters\"] = get_global_type_distribution(stats, lambda x: len(x.parameters))\n",
-    "distribution[\"traits\"] = get_global_type_distribution(stats, lambda x: len(x.traits))\n",
-    "distribution[\"interfaces\"] = get_global_type_distribution(stats, lambda x: len(x.interfaces))\n",
+    "distribution[\"parameters\"] = get_type_plot_stats(stats, lambda x: len(x.parameters), \"Distribution of the number of parameter definitions\")\n",
+    "distribution[\"traits\"] = get_type_plot_stats(stats, lambda x: len(x.traits), \"Distribution of the number of traits\")\n",
+    "distribution[\"interfaces\"] = get_type_plot_stats(stats, lambda x: len(x.interfaces), \"Distribution of the number of interfaces\")\n",
     "\n",
     "category_plot(distribution)"
    ]
@@ -195,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "34201011-5886-4567-bc84-347c32ab36a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eab49301b3c40f6ad798a83785bb4d3",
+       "model_id": "fbae041d16cd462b837e148e1469a9bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,9 +255,9 @@
    ],
    "source": [
     "distribution = dict()\n",
-    "distribution[\"parameters\"] = get_global_attr_distribution(stats, lambda x: len(x.parameters))\n",
-    "distribution[\"traits\"] = get_global_attr_distribution(stats, lambda x: len(x.traits))\n",
-    "distribution[\"interfaces\"] = get_global_attr_distribution(stats, lambda x: len(x.interfaces))\n",
+    "distribution[\"parameters\"] = get_type_plot_stats(stats, lambda x: len(x.parameters), \"Distribution of the number of parameters\")\n",
+    "distribution[\"traits\"] = get_type_plot_stats(stats, lambda x: len(x.traits), \"Distribution of the number of traits\")\n",
+    "distribution[\"interfaces\"] = get_type_plot_stats(stats, lambda x: len(x.interfaces), \"Distribution of the number of interfaces\")\n",
     "\n",
     "category_plot(distribution)"
    ]
@@ -233,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "id": "14025162-65fe-4733-ad18-50d02aaf34fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8da7db71eca24d9dad424041083dd15c",
+       "model_id": "30f43d8576dd48aabb222d884874b415",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,20 +294,18 @@
    "source": [
     "distribution = dict()\n",
     "# TODO check constraints in types/attributes\n",
-    "distribution[\"types\"] = get_global_type_distribution(stats, lambda x: int(not x.hasVerifier))\n",
-    "distribution[\"attributes\"] = get_global_attr_distribution(stats, lambda x: int(not x.hasVerifier))\n",
-    "distribution[\"op has C++ parser\"] = get_global_op_distribution(stats, lambda x: int(not x.hasAssemblyFormat))\n",
-    "distribution[\"op has C++ verifier\"] = get_global_op_distribution(stats, lambda x: int(x.hasVerifier))\n",
+    "distribution[\"types\"] = get_op_plot_stats(stats, lambda x: int(not x.hasVerifier), \"Distribution of types that can be expressed in IRDL\")\n",
+    "distribution[\"attributes\"] = get_op_plot_stats(stats, lambda x: int(not x.hasVerifier), \"Distribution of attributes that can be expressed in IRDL\")\n",
+    "distribution[\"op has C++ parser\"] = get_op_plot_stats(stats, lambda x: int(not x.hasAssemblyFormat), \"Distribution of the number of C++ printer/parsers on operations\")\n",
+    "distribution[\"op has C++ verifier\"] = get_op_plot_stats(stats, lambda x: int(x.hasVerifier), \"Distribution of the number of C++ verifiers on operations\")\n",
     "# Number of operations that have declarative operands/results\n",
-    "distribution[\"decl operands/results\"] = get_global_op_distribution(stats, lambda x: int(x.is_operands_results_attrs_declarative()))\n",
+    "distribution[\"decl operands/results\"] = get_op_plot_stats(stats, lambda x: int(x.is_operands_results_attrs_declarative()), \"How many operations have operands/results expressable in IRDL\")\n",
     "# Number of operations that have declarative traits\n",
-    "distribution[\"decl op traits\"] = get_global_op_distribution(stats, lambda x: int(x.is_traits_declarative()))\n",
+    "distribution[\"decl op traits\"] = get_op_plot_stats(stats, lambda x: int(x.is_traits_declarative()), \"How many operations have traits expressable in IRDL\")\n",
     "# Number of operations that have declarative operands, results, and no C++ verifiers\n",
-    "distribution[\"decl ops without traits/interfaces\"] = get_global_op_distribution(stats, lambda x: int(x.is_declarative(check_traits=False, check_interfaces=False)))\n",
-    "# Fully declarative\n",
-    "distribution[\"decl ops without interfaces\"] = get_global_op_distribution(stats, lambda x: int(x.is_declarative(check_traits=True, check_interfaces=False)))\n",
-    "# Fully declarative\n",
-    "distribution[\"decl ops\"] = get_global_op_distribution(stats, lambda x: int(x.is_declarative(check_traits=True, check_interfaces=True)))\n",
+    "distribution[\"decl ops without traits/interfaces\"] = get_op_plot_stats(stats, lambda x: int(x.is_declarative(check_traits=False, check_interfaces=False)), \"How many operations can be expressed in IRDL without traits and interfaces\")\n",
+    "distribution[\"decl ops without interfaces\"] = get_op_plot_stats(stats, lambda x: int(x.is_declarative(check_traits=True, check_interfaces=False)), \"How many operations can be expressed in IRDL without interfaces\")\n",
+    "distribution[\"decl ops\"] = get_op_plot_stats(stats, lambda x: int(x.is_declarative(check_traits=True, check_interfaces=True)), \"How many operations can be fully expressed in IRDL\")\n",
     "\n",
     "category_plot(distribution)"
    ]
@@ -283,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "id": "13c99d96-93a4-409d-bea1-58119a482fc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e53b9057a70f48baaa7e529d4789ab8d",
+       "model_id": "72d57a773e3445b0ac79bcf4a1ba97e7",
        "version_major": 2,
        "version_minor": 0
       },
