--- a/analyze-tblgen/src/visualize_stats.ipynb
+++ b/analyze-tblgen/src/visualize_stats.ipynb
@@ -34,14 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "02091e87-670f-469f-b39c-293fc1f4a114",
    "metadata": {},
    "outputs": [],
    "source": [
     "from analyze_tablegen.main import *\n",
     "import ipywidgets as widgets\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a1e14519-1ece-4d6e-ba65-4df5f59072e8",
    "metadata": {},
    "outputs": [],
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "2c8235b5-f5ba-4b2a-bfb4-33fb510a2745",
    "metadata": {},
    "outputs": [],
@@ -91,11 +92,21 @@
     "    def with_integer_keys(values, title=None):\n",
     "        return PlotData([str(i) for i in range(len(values))], values, title=title)\n",
     "\n",
+    "@dataclass\n",
+    "class MultibarPlotData:\n",
+    "    keys: List[str]\n",
+    "    values: Dict[str, List[int]]\n",
+    "    title: Optional[str]\n",
+    "    \n",
+    "    def with_integer_keys(values, title=None):\n",
+    "        return PlotData([str(i) for i in range(len(next(iter(values.items()))[1]))], values, title=title)\n",
+    "    \n",
     "# Map raw data gathered from get_global_*_distribution to plot data\n",
     "def map_dialect_data_to_plot(distribution, title=None):\n",
-    "    all_dialects = PlotData.with_integer_keys(distribution[0], title=title)\n",
+    "    all_dialects = MultibarPlotData.with_integer_keys(distribution[1], title=title)\n",
+    "    dialects_sum = PlotData.with_integer_keys(distribution[0], title=title)\n",
     "    dialects = {dialect_name: PlotData.with_integer_keys(dialect_data, title=title) for dialect_name, dialect_data in distribution[1].items()}\n",
-    "    return (all_dialects, dialects)\n",
+    "    return (all_dialects, dialects_sum, dialects)\n",
     "\n",
     "def get_op_plot_stats(stats, lam, title=None):\n",
     "    return map_dialect_data_to_plot(get_global_op_distribution(stats, lam), title=title)\n",
@@ -113,6 +124,34 @@
     "    plt.show()\n",
     "    plt.close()\n",
     "    \n",
+    "def plot_multibar_graph(plot_data, colors=None, size=(12, 6)):\n",
+    "    results = [r for r in plot_data.values.items()]\n",
+    "    labels = [r[0] for r in results]\n",
+    "    data = np.array([r[1] for r in results])\n",
+    "    data_cum = data.cumsum(axis=1)\n",
+    "    if colors is None:\n",
+    "        colors = plt.get_cmap('RdYlGn')(np.linspace(1, 0.5, data.shape[1]))\n",
+    "\n",
+    "    fig = plt.figure(figsize=size)\n",
+    "    ax = plt.axes()\n",
+    "    ax.invert_yaxis()\n",
+    "    ax.set_xlim(0, np.sum(data, axis=1).max())\n",
+    "\n",
+    "    for i, (colname, color) in enumerate(zip(plot_data.keys, colors)):\n",
+    "        widths = data[:, i]\n",
+    "        starts = data_cum[:, i] - widths\n",
+    "        rects = ax.barh(labels, widths, left=starts, height=0.5,\n",
+    "                        label=colname, color=color)\n",
+    "\n",
+    "        r, g, b, _ = color\n",
+    "    ax.legend(ncol=len(plot_data.keys), bbox_to_anchor=(0, 1),\n",
+    "              loc='lower left', fontsize='small')\n",
+    "    if plot_data.title is not None:\n",
+    "        plt.title(plot_data.title)\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()\n",
+    "    plt.close()\n",
+    "\n",
     "def category_plot(distribution):\n",
     "    category_select = widgets.ToggleButtons(\n",
     "        options=distribution.keys(),\n",
@@ -124,9 +163,11 @@
     "    @widgets.interact(category=category_select)\n",
     "    def category_plot_(category):\n",
     "        all_distribution = distribution[category][0]\n",
-    "        per_dialect_distribution = distribution[category][1]\n",
+    "        distribution_sum = distribution[category][1]\n",
+    "        per_dialect_distribution = distribution[category][2]\n",
     "\n",
-    "        plot_simple_consecutive_integer_data(all_distribution)\n",
+    "        plot_multibar_graph(all_distribution)\n",
+    "        plot_simple_consecutive_integer_data(distribution_sum)\n",
     "\n",
     "        toggle_select =widgets.ToggleButtons(\n",
     "            options=dialect_names,\n",
@@ -153,19 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "fecb9e4b-f32b-4ff5-aab1-7272f931efe0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b86e90fb9924f30a47e99d890ebdf2b",
+       "model_id": "4fde7d094e944f4c93cd418fd48139c2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(ToggleButtons(description='Category:', options=('operands', 'results', 'regions', 'attri…"
+       "interactive(children=(ToggleButtons(description='Category:', options=('operands', 'variadic operands', 'result…"
       ]
      },
      "metadata": {},
@@ -175,7 +216,10 @@
    "source": [
     "distribution = dict()\n",
     "distribution[\"operands\"] = get_op_plot_stats(stats, lambda x: x.numOperands, title=\"Distribution of the number of operand definitions\")\n",
+    "distribution[\"variadic operands\"] = get_op_plot_stats(stats, lambda x: sum([isinstance(operand.constraint, VariadicConstraint) for operand in x.operands]), title=\"Distribution of the number of variadic operand definitions\")\n",
     "distribution[\"results\"] = get_op_plot_stats(stats, lambda x: x.numResults, title=\"Distribution of the number of result definitions\")\n",
+    "distribution[\"variadic results\"] = get_op_plot_stats(stats, lambda x: sum([isinstance(result.constraint, VariadicConstraint) for result in x.results]), title=\"Distribution of the number of variadic result definitions\")\n",
+    "distribution[\"multiple results\"] = get_op_plot_stats(stats, lambda x: int(x.numResults > 1 or sum([isinstance(result.constraint, VariadicConstraint) for result in x.results]) > 0), title=\"Distribution of the number of variadic result definitions\")\n",
     "distribution[\"regions\"] = get_op_plot_stats(stats, lambda x: x.numRegions, title=\"Distribution of the number of region definitions\")\n",
     "distribution[\"attributes\"] = get_op_plot_stats(stats, lambda x: len(x.attributes), title=\"Distribution of the number of attribute definitions\")\n",
     "distribution[\"C++ printer\"] = get_op_plot_stats(stats, lambda x: 1 - int(x.hasAssemblyFormat), title=\"Distribution of number of C++ printers\")\n",
