Fix types and attributes visualization

--- a/analyze-tblgen/src/visualize_stats.ipynb
+++ b/analyze-tblgen/src/visualize_stats.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "02091e87-670f-469f-b39c-293fc1f4a114",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a1e14519-1ece-4d6e-ba65-4df5f59072e8",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2c8235b5-f5ba-4b2a-bfb4-33fb510a2745",
    "metadata": {},
    "outputs": [],
@@ -194,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fecb9e4b-f32b-4ff5-aab1-7272f931efe0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fde7d094e944f4c93cd418fd48139c2",
+       "model_id": "ac0bb75dc0f54b14b60b8d094534303d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "ba4eccf3-4552-42c5-a5e4-934b55be2425",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2b9129812f443ca805e4fe0f3c3a7ba",
+       "model_id": "62193053ef144ef08acc022345be5e82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -278,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "34201011-5886-4567-bc84-347c32ab36a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbae041d16cd462b837e148e1469a9bc",
+       "model_id": "045f65435aae46e38b88cc674ca9b6c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "14025162-65fe-4733-ad18-50d02aaf34fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30f43d8576dd48aabb222d884874b415",
+       "model_id": "17e36a9793d645f0bb45c69a453f5505",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,8 +338,8 @@
    "source": [
     "distribution = dict()\n",
     "# TODO check constraints in types/attributes\n",
-    "distribution[\"types\"] = get_op_plot_stats(stats, lambda x: int(not x.hasVerifier), \"Distribution of types that can be expressed in IRDL\")\n",
-    "distribution[\"attributes\"] = get_op_plot_stats(stats, lambda x: int(not x.hasVerifier), \"Distribution of attributes that can be expressed in IRDL\")\n",
+    "distribution[\"types\"] = get_type_plot_stats(stats, lambda x: int(x.is_declarative()), \"Distribution of types that can be expressed in IRDL\")\n",
+    "distribution[\"attributes\"] = get_attr_plot_stats(stats, lambda x: int(x.is_declarative()), \"Distribution of attributes that can be expressed in IRDL\")\n",
     "distribution[\"op has C++ parser\"] = get_op_plot_stats(stats, lambda x: int(not x.hasAssemblyFormat), \"Distribution of the number of C++ printer/parsers on operations\")\n",
     "distribution[\"op has C++ verifier\"] = get_op_plot_stats(stats, lambda x: int(x.hasVerifier), \"Distribution of the number of C++ verifiers on operations\")\n",
     "# Number of operations that have declarative operands/results\n",
