Add plots for paper, and add region support

--- a/analyze-tblgen/src/visualize_stats.ipynb
+++ b/analyze-tblgen/src/visualize_stats.ipynb
@@ -201,7 +201,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac0bb75dc0f54b14b60b8d094534303d",
+       "model_id": "ccfed686d4114c9e9573eade1f048ed5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,7 +220,7 @@
     "distribution[\"results\"] = get_op_plot_stats(stats, lambda x: x.numResults, title=\"Distribution of the number of result definitions\")\n",
     "distribution[\"variadic results\"] = get_op_plot_stats(stats, lambda x: sum([isinstance(result.constraint, VariadicConstraint) for result in x.results]), title=\"Distribution of the number of variadic result definitions\")\n",
     "distribution[\"multiple results\"] = get_op_plot_stats(stats, lambda x: int(x.numResults > 1 or sum([isinstance(result.constraint, VariadicConstraint) for result in x.results]) > 0), title=\"Distribution of the number of variadic result definitions\")\n",
-    "distribution[\"regions\"] = get_op_plot_stats(stats, lambda x: x.numRegions, title=\"Distribution of the number of region definitions\")\n",
+    "distribution[\"regions\"] = get_op_plot_stats(stats, lambda x: len(x.regions), title=\"Distribution of the number of region definitions\")\n",
     "distribution[\"attributes\"] = get_op_plot_stats(stats, lambda x: len(x.attributes), title=\"Distribution of the number of attribute definitions\")\n",
     "distribution[\"C++ printer\"] = get_op_plot_stats(stats, lambda x: 1 - int(x.hasAssemblyFormat), title=\"Distribution of number of C++ printers\")\n",
     "distribution[\"C++ verifier\"] = get_op_plot_stats(stats, lambda x: int(x.hasVerifier), title=\"Distribution of the number of C++ verifiers\")\n",
@@ -247,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62193053ef144ef08acc022345be5e82",
+       "model_id": "5b6571df879b4776a7de045113b833c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,7 +285,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "045f65435aae46e38b88cc674ca9b6c8",
+       "model_id": "c62e9a1b94a24c8897215f6646272f92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "14025162-65fe-4733-ad18-50d02aaf34fe",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17e36a9793d645f0bb45c69a453f5505",
+       "model_id": "b32bd0b65178435eb97c12736cf9f7f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "13c99d96-93a4-409d-bea1-58119a482fc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72d57a773e3445b0ac79bcf4a1ba97e7",
+       "model_id": "fe78add921a84ec4823c9d9deba8b5c7",
        "version_major": 2,
        "version_minor": 0
       },
